--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- Nosso CSS -->
     <link rel="stylesheet" href="/assets/css/global.css">
     <link rel="stylesheet" href="/assets/css/pokedex.css">
+    <link rel="stylesheet" href="/assets/css/pokeDetails.css">
 </head>
 
 <body>
@@ -27,6 +28,10 @@
         <h1>Pokedex</h1>
 
         <ol id="pokemonList" class="pokemons">
+            <!-- ..... Pokemons here ..... -->
+        </ol>
+        
+        <ol id="pokemonAppear" class="">
             <!-- ..... Pokemons here ..... -->
         </ol>
 
